src/objects/TO_Product_Information__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>TO - Article type used to hold information specifically relating to a product such as a detailed description, pack images, usage and storage information</description>
    <fields>
        <fullName>Suitability__c</fullName>
        <label>Suitability</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_Additional_Information__c</fullName>
        <description>TO</description>
        <label>Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TO_Additional_Sensitive_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO</description>
        <label>Additional Sensitive Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TO_Approved_by_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO - A way for the Knowledge Manager to mark that an article has been approved by the legal department</description>
        <label>Approved by Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TO_Availability__c</fullName>
        <description>TO</description>
        <label>Availability</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_Benefit__c</fullName>
        <description>TO</description>
        <label>Benefit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_Brand__c</fullName>
        <description>TO</description>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Date_Code_Location__c</fullName>
        <description>TO</description>
        <label>Date Code Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_GTIN_Code_Last_4__c</fullName>
        <description>TO - Used to store the last 4 characters of the GTIN/UPC code (Product Code)</description>
        <label>GTIN Code Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Ingredients__c</fullName>
        <description>TO</description>
        <label>Ingredients</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_Legacy_Text__c</fullName>
        <description>TO - Text field used to hold category or keyword values in the previous knowledgebase</description>
        <label>Legacy Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_PDF_Version__c</fullName>
        <description>TO</description>
        <label>PDF Version</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>TO_Pack_Shot__c</fullName>
        <description>TO</description>
        <label>Pack Shot</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TO_Packaging_Description__c</fullName>
        <description>TO</description>
        <label>Packaging Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Product_Code__c</fullName>
        <description>TO</description>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Product_Description__c</fullName>
        <description>TO</description>
        <label>Product Description</label>
        <length>14000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_Recycling_Info__c</fullName>
        <description>TO</description>
        <label>Recycling Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TO_Sensitive_Text__c</fullName>
        <description>TO</description>
        <label>Sensitive Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TO_Shelf_Life__c</fullName>
        <description>TO</description>
        <label>Shelf Life</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TO_Size__c</fullName>
        <description>TO</description>
        <label>Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Storage__c</fullName>
        <description>TO</description>
        <label>Storage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>Usage</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>TO - Product Information</label>
    <pluralLabel>TO - Product Information</pluralLabel>
</CustomObject>